--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SocialCompass</string>
+    <string name="msg_location_permissions_denied">Please enable location permissions to display current location. You can enable these permissions in settings.</string>
 </resources>
