Connected US1 with US2, the CompassViewActivity gets the locations to track from the addhome activity in preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">SocialCompass</string>
     <string name="msg_location_permissions_denied">Please enable location permissions to display current location. You can enable these permissions in settings.</string>
+    <string name="parentLabelKey">parentLabelKey</string>
+    <string name="parentLatKey">parentLatKey</string>
+    <string name="parentLongKey">parentLongKey</string>
 </resources>
