US10 added UI for story 10, location can be changed later on. but orientation override does not work yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="parentLabelKey">parentLabelKey</string>
     <string name="parentLatKey">parentLatKey</string>
     <string name="parentLongKey">parentLongKey</string>
+    <string name="orientOverride">orientOverride</string>
+    <string name="orientOverrideBool">orientOverrideBool</string>
 </resources>
